here i create new menu that is community policy and i push code in main branch

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
           <li><a href="terms.html">Terms and conditions</a></li>
           <li><a href="privacy.html">Privacy policy</a></li>
           <li><a href="refund.html">Refund policy</a></li>
+           <li><a href="community.html">community policy</a></li>
 
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
