this is new change and i push code in main branch

--- a/index.html
+++ b/index.html
@@ -332,9 +332,10 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Address</h3>
-                <p>No. 3 Ragavendra garden , Thiruvanai Kovil , Trichy, LPG Auto Gas Opposite Road
-                  Tiruchirappalli - 620005 
-                  Tamil Nadu, India</p>
+                <p>Innovfix Private Limited,<br>
+                  Indiqube Ascent, Municipal No. 420, PID68-6-420,<br>
+                  IV Block, Koramangala, Bangalore South,<br>
+                  Bangalore - 560034, Karnataka, India.</p>
               </div>
             </div><!-- End Info Item -->
 
